Converting initial spaces to tabs.
This was done in several steps:
1. Fix unambiguous cases automatically (468 files)
 - python development/spacestotabs.py -t .8 -x $(find . -iname '*.java'|tr \\n ' ')
2. Lower the threshold (.4) and check the results manually. Where needed, do additional
   reformatting in eclipse or by hand. (128 files)
3. Manually look through the remaining cases (45 files)
Some files (e.g. PDBFileParser.java) had legitimate uses for spaces in comment blocks and were reverted.